--- a/polybar/config
+++ b/polybar/config
@@ -3,4 +3,5 @@ include-file = $HOME/.config/polybar/modules.conf
 include-file = $HOME/.config/polybar/master.conf
 
 include-file = $HOME/.config/polybar/polybars/top.conf
+include-file = $HOME/.config/polybar/polybars/top-only.conf
 include-file = $HOME/.config/polybar/polybars/bottom.conf
