--- a/polybar/master.conf
+++ b/polybar/master.conf
@@ -7,3 +7,12 @@ foreground-alt = #555
 primary = #FFF
 secondary = #B2535B
 alert = #B2535B
+moderate = #ebcb8b
+urgent = #bf616a
+trim = #8fa1b3
+blue = #8fa1b3
+pink = #bf616a
+orange = #ebcb8b
+purple = #b48ead
+yellow = #ebcb8b
+border = #c0c5ce
