--- a/polybar/modules.conf
+++ b/polybar/modules.conf
@@ -2,6 +2,26 @@
 ; MODULES ;
 ;---------;
 
+[module/keyboard]
+type           = internal/xkeyboard
+blacklist-0    = scroll lock
+format         = <label-layout> <label-indicator>
+format-spacing = 0
+
+; Available tokens:
+;   %layout%
+;   %name%
+;   %number%
+; Default: %layout%
+label-layout   = %{A1:mintlocale & disown:} %{A3:mintlocale & disown:} %layout%%{A} %{A}
+
+; Available tokens:
+;   %name%
+; Default: %name%
+label-indicator = %name%
+label-indicator-padding = 2
+label-indicator-background = #8139e8
+
 [module/jgmenu]
 type = custom/script
 label = %output%
@@ -18,11 +38,21 @@ exec-if = ping openweathermap.org -c 1
 interval = 600
 label-font = 3
 
+[module/window_switch]
+type = custom/script
+interval = 5
+label = %output%
+click-left = skippy-xd
+click-right = skippy-xd
+exec = echo ""
+format = <label>
+
+
 [module/pkg]
 type = custom/script
-exec = tail -F /tmp/.update_status
-exec-if = [ -p /tmp/.update_status ]
-label-padding = 1
+exec = $HOME/.config/polybar/scripts/updates.sh
+exec-if = "ping -q -w 2 -c 1 176.34.135.167 > /dev/null"
+label = %{A1:termite --exec=pacli & disown:} %{A3:termite --exec=pacli & disown:}%output%%{A} %{A}
 tail = true
 
 
@@ -45,7 +75,7 @@ label-maxlen = 80
 type = internal/xkeyboard
 blacklist-0 = num lock
 
-format-prefix = " "
+format-prefix = "  "
 format-prefix-foreground = ${colors.foreground-alt}
 format-prefix-underline = ${colors.secondary}
 
@@ -62,7 +92,6 @@ type = internal/fs
 interval = 25
 
 mount-0 = /
-mount-1 = /home
 
 label-mounted =  %mountpoint% %percentage_used%% of %total%
 label-mounted-foreground = ${colors.primary}
@@ -148,7 +177,7 @@ card = intel_backlight
 [module/cpu]
 type = internal/cpu
 interval = 2
-format-prefix = " CPU "
+format-prefix = "  "
 format-prefix-foreground = ${colors.primary}
 format-underline = 
 label = %percentage:2%%
@@ -157,13 +186,17 @@ label-foreground = ${colors.primary}
 [module/memory]
 type = internal/memory
 interval = 2
-format-prefix = " RAM "
+format-prefix = "  "
 format-prefix-foreground = ${colors.primary}
 format-underline = 
 label = %percentage_used%%
 label-foreground = ${colors.primary}
 
 [module/wlan]
+inherit = module/wlan-description
+format-connected = <ramp-signal>
+
+[module/wlan-description]
 type = internal/network
 interface = wlp2s0u1u2
 interval = 3.0
@@ -179,11 +212,11 @@ format-disconnected =
 ;label-disconnected = %ifname% disconnected
 ;label-disconnected-foreground = ${colors.foreground-alt}
 
-ramp-signal-0 = "  "
-ramp-signal-1 = "  
-ramp-signal-2 = "  "
-ramp-signal-3 = "  "
-ramp-signal-4 = "  "
+ramp-signal-0 = " "
+ramp-signal-1 = " "
+ramp-signal-2 = " "
+ramp-signal-3 = " "
+ramp-signal-4 = " "
 ramp-signal-foreground = ${colors.primary}
 
 [module/eth]
@@ -192,7 +225,7 @@ interface = enp2s0
 interval = 3.0
 
 format-connected-underline = #55aa55
-format-connected-prefix = " "
+format-connected-prefix = "  "
 format-connected-prefix-foreground = ${colors.foreground-alt}
 label-connected = %local_ip%
 
@@ -207,7 +240,7 @@ type = internal/date
 interval = 5
 
 date =
-date-alt = " %d %m %Y"
+date-alt = " %Y-%m-%d"
 
 time = %H:%M
 time-alt = %H:%M:%S
@@ -254,7 +287,7 @@ format-volume = <label-volume> <bar-volume>
 label-volume = VOL
 label-volume-foreground = ${root.foreground}
 
-format-muted-prefix = " "
+format-muted-prefix = "  "
 format-muted-foreground = ${colors.foreground-alt}
 label-muted = sound muted
 
@@ -277,37 +310,37 @@ bar-volume-empty-foreground = ${colors.foreground-alt}
 
 [module/battery]
 type = internal/battery
-battery = BAT1
-adapter = ADP1
+; Use $ ls -1 /sys/class/power_supply/
+battery = ${env:LAPTOP_BATTERY:BAT1}
+adapter = ${env:LAPTOP_ADAPTER:ACAD}
 full-at = 98
+poll-interval = 5
+time-format = %H:%M
 
 format-charging = <animation-charging> <label-charging>
-format-charging-underline = 
+format-discharging = <ramp-capacity> <label-discharging>
+format-full = <ramp-capacity> <label-full>
 
-format-discharging = <animation-discharging> <label-discharging>
-format-discharging-underline = ${self.format-charging-underline}
+label-charging = %{A1:xfce4-power-manager-settings & disown:}%percentage%% %{A}
+label-discharging = %{A1:xfce4-power-manager-settings & disown:}%percentage%% %{A}
+label-full = %{A1:xfce4-power-manager-settings & disown:}%percentage%% %{A}
 
-format-full-prefix = "  "
-format-full-prefix-foreground = ${colors.primary}
-format-full-underline = ${self.format-charging-underline}
-format-full-foreground = ${colors.primary}
+ramp-capacity-0 = 
+ramp-capacity-1 = 
+ramp-capacity-2 = 
+ramp-capacity-3 = 
+ramp-capacity-4 = 
+ramp-capacity-0-foreground = ${colors.urgent}
+ramp-capacity-1-foreground = ${colors.moderate}
+ramp-capacity-foreground   = ${colors.blue}
 
-ramp-capacity-0 = 
-ramp-capacity-1 = 
-ramp-capacity-2 = 
-ramp-capacity-foreground = ${colors.foreground-alt}
-
-animation-charging-0 = 
-animation-charging-1 = 
-animation-charging-2 = 
-animation-charging-foreground = ${colors.foreground-alt}
+bar-capacity-width = 10
+animation-charging-0 = " "
+animation-charging-1 = " "
+animation-charging-2 = " "
+animation-charging-3 = " "
+animation-charging-4 = " "
 animation-charging-framerate = 750
-
-animation-discharging-0 = 
-animation-discharging-1 = 
-animation-discharging-2 = 
-animation-discharging-foreground = ${colors.foreground-alt}
-animation-discharging-framerate = 750
 
 [module/temperature]
 type = internal/temperature
@@ -320,8 +353,8 @@ format-underline =
 format-warn = <ramp> <label-warn>
 format-warn-underline = 
 
-label =  TEMPERATURE %temperature-c%
-label-warn =  TEMPERATURE %temperature-c%
+label =  %temperature-c%
+label-warn =  %temperature-c%
 label-warn-foreground = ${colors.secondary}
 label-foreground = ${colors.primary}
 
@@ -330,32 +363,49 @@ ramp-1 = 
 ramp-2 = 
 ramp-foreground = ${colors.primary}
 
-[module/powermenu]
+[module/menu]
 type = custom/menu
-expand-right = true
 format-spacing = 1
-
-label-open = "  "
-label-open-foreground = ${colors.primary}
-label-close = "  cancel "
-label-close-foreground = ${colors.secondary}
-label-separator = |
-label-separator-foreground = ${colors.primary}
-
-menu-0-0 = reboot
+label-open = "  "
+label-close = "  "
+label-close-foreground = ${colors.urgent}
+label-separator = " | "
+# Top level
+menu-0-0 = "  "
 menu-0-0-exec = menu-open-1
-menu-0-1 = power off
+menu-0-1 = "  "
 menu-0-1-exec = menu-open-2
-
-menu-1-0 = cancel
+menu-0-2 = "   |"
+menu-0-2-exec = menu-open-3
+# 1
+menu-1-0 = "  "
 menu-1-0-exec = menu-open-0
-menu-1-1 = reboot
-menu-1-1-exec = sudo reboot
+menu-1-0-foreground = ${colors.urgent}
+menu-1-1 = "  "
+menu-1-1-exec = exo-open --launch WebBrowser
+menu-1-2 = "  "
+menu-1-2-exec = exo-open --launch TerminalEmulator
+menu-1-3 = "   |"
+menu-1-3-exec = exo-open --launch FileManager
+# 2
+menu-2-0 = "  "
+menu-2-0-exec = menu-open-0
+menu-2-0-foreground = ${colors.urgent}
+menu-2-1 = "  "
+menu-2-1-exec = xfce4-settings-manager &
+menu-2-2 = "   |"
+menu-2-2-exec = pavucontrol &
+# 3
+menu-3-0 = "  "
+menu-3-0-exec = menu-open-0
+menu-3-0-foreground = ${colors.urgent}
+menu-3-1 = "  "
+menu-3-1-exec = i3lock-fancy -p -f Ubuntu &
+menu-3-2 = "  "
+menu-3-2-exec = systemctl -i reboot
+menu-3-3 = "   |"
+menu-3-3-exec = systemctl -i poweroff
 
-menu-2-0 = power off
-menu-2-0-exec = sudo poweroff
-menu-2-1 = cancel
-menu-2-1-exec = menu-open-0
 
 [settings]
 screenchange-reload = true
