--- a/polybar/polybars/top-only.conf
+++ b/polybar/polybars/top-only.conf
@@ -1,4 +1,4 @@
-[bar/PolybarTop]
+[bar/PolybarTopOnly]
 line-size = 3
 line-color = #f00
 
@@ -59,9 +59,9 @@ padding-right = 2
 module-margin-left = 1
 module-margin-right = 2
 
-modules-left = jgmenu menu window_switch keyboard pulseaudio backlight-acpi
-modules-center = xwindow
-modules-right = wlan-description battery weather pkg date
+modules-left = jgmenu menu window_switch pulseaudio backlight-acpi
+modules-center =
+modules-right = memory cpu temperature wlan battery pkg weather keyboard date
 
 tray-position = hidden
 tray-padding = 2 
