--- a/polybar/modules.conf
+++ b/polybar/modules.conf
@@ -33,7 +33,7 @@ click-right = exo-open $HOME/.config/jgmenu/jgmenurc
 
 [module/weather]
 type = custom/script
-exec = $HOME/.config/polybar/scripts/openweathermap-detailed.sh
+exec = $HOME/.config/polybar/scripts/openweathermap-detailed
 exec-if = ping openweathermap.org -c 1
 interval = 600
 label-font = 3
@@ -50,7 +50,7 @@ format = <label>
 
 [module/pkg]
 type = custom/script
-exec = $HOME/.config/polybar/scripts/updates.sh
+exec = $HOME/.config/polybar/scripts/updates
 exec-if = "ping -q -w 2 -c 1 176.34.135.167 > /dev/null"
 label = %{A1:termite --exec=pacli & disown:} %{A3:termite --exec=pacli & disown:}%output%%{A} %{A}
 tail = true
@@ -61,7 +61,7 @@ type = custom/script
 interval = 1
 format-prefix = "  "
 format = <label>
-exec = python $HOME/.config/polybar/scripts/spotify.py
+exec = python $HOME/.config/polybar/scripts/spotify
 format-underline = 
 format-foreground = ${colors.primary}
 
