--- a/polybar/modules.conf
+++ b/polybar/modules.conf
@@ -169,10 +169,17 @@ bar-empty = ─
 bar-empty-font = 4
 bar-empty-foreground = ${colors.foreground-alt}
 
+[module/backlight-acpi-bar]
+inherit = module/xbacklight
+type = internal/backlight
+card = intel_backlight
+format = <label> <bar>
+
 [module/backlight-acpi]
 inherit = module/xbacklight
 type = internal/backlight
 card = intel_backlight
+format = <label>
 
 [module/cpu]
 type = internal/cpu
@@ -191,6 +198,14 @@ format-prefix-foreground = ${colors.primary}
 format-underline = 
 label = %percentage_used%%
 label-foreground = ${colors.primary}
+
+[module/networkmanager-dmenu]
+type = custom/script
+exec = check-network
+click-left = networkmanager_dmenu &
+click-right = networkmanager_dmenu &
+label-padding = 1
+tail = true
 
 [module/wlan]
 inherit = module/wlan-description
@@ -252,10 +267,14 @@ format-foreground = ${colors.primary}
 
 label = %date% %time%
 
+[module/pulseaudio-bar]
+inherit = module/pulseaudio
+format-volume =   <label-volume> <bar-volume>
+
 [module/pulseaudio]
 type = internal/pulseaudio
 
-format-volume =   <label-volume> <bar-volume>
+format-volume =   <label-volume>
 format-volume-foreground = ${colors.primary}
 label-volume = %percentage%%
 label-volume-foreground = ${colors.primary}
