--- a/polybar/polybars/top-only.conf
+++ b/polybar/polybars/top-only.conf
@@ -61,7 +61,7 @@ module-margin-right = 2
 
 modules-left = jgmenu menu window_switch pulseaudio backlight-acpi
 modules-center =
-modules-right = memory cpu temperature wlan battery pkg weather keyboard date
+modules-right = memory cpu temperature networkmanager-dmenu battery pkg weather keyboard date
 
 tray-position = hidden
 tray-padding = 2 
