--- a/polybar/polybars/top.conf
+++ b/polybar/polybars/top.conf
@@ -59,9 +59,9 @@ padding-right = 2
 module-margin-left = 1
 module-margin-right = 2
 
-modules-left = jgmenu menu window_switch keyboard pulseaudio backlight-acpi
+modules-left = jgmenu menu window_switch keyboard pulseaudio-bar backlight-acpi-bar
 modules-center = xwindow
-modules-right = wlan-description battery weather pkg date
+modules-right = networkmanager-dmenu battery weather pkg date
 
 tray-position = hidden
 tray-padding = 2 
