--- a/common/.config/polybar/polybars/bottom.conf
+++ b/common/.config/polybar/polybars/bottom.conf
@@ -1,5 +1,5 @@
 
-[bar/PolybarBot]
+[bar/polybar-bottom]
 line-size = 3
 line-color = #f00
 
@@ -62,4 +62,4 @@ module-margin-right = 2
 
 modules-left = i3
 modules-center = spotify
-modules-right = filesystem memory cpu temperature
+modules-right = keyboard
