--- a/common/.config/polybar/polybars/top.conf
+++ b/common/.config/polybar/polybars/top.conf
@@ -1,4 +1,4 @@
-[bar/PolybarTop]
+[bar/polybar-top]
 line-size = 3
 line-color = #f00
 
@@ -59,9 +59,9 @@ padding-right = 2
 module-margin-left = 1
 module-margin-right = 2
 
-modules-left = jgmenu menu window_switch keyboard pulseaudio-bar backlight-acpi-bar
-modules-center = xwindow
-modules-right = networkmanager-dmenu battery weather pkg date
+modules-left = jgmenu menu window_switch pulseaudio-bar backlight-acpi-bar
+modules-center = date
+modules-right = pkg filesystem memory cpu temperature networkmanager-dmenu
 
 tray-position = hidden
 tray-padding = 2 
