--- a/common/config/polybar/polybars/top-only.conf
+++ b/common/config/polybar/polybars/top-only.conf
@@ -60,11 +60,11 @@ module-margin-left = 1
 module-margin-right = 2
 
 modules-left = jgmenu menu window_switch pulseaudio backlight-acpi
-modules-center =
-modules-right = memory cpu temperature networkmanager-dmenu battery pkg weather keyboard date
+modules-center = date
+modules-right = memory cpu temperature networkmanager-dmenu battery pkg weather keyboard
 
 tray-position = hidden
-tray-padding = 2 
+tray-padding = 2
 ;tray-transparent = true
 ;tray-background = #0063ff
 
