--- a/common/config/polybar/polybars/small-bottom.conf
+++ b/common/config/polybar/polybars/small-bottom.conf
@@ -1,4 +1,5 @@
-[bar/polybar-top-only]
+
+[bar/small-polybar-bottom]
 line-size = 3
 line-color = #f00
 
@@ -10,12 +11,12 @@ border-color = #00000000
 ;------------;
 
 width = 100%
-height = 35
+height = 25
 offset-y = 0
 offset-x = 0
 
-border-top-size = 10
-border-bottom-size = 5
+border-top-size = 0
+border-bottom-size = 10
 border-right-size = 10
 border-left-size = 10
 
@@ -23,7 +24,7 @@ border-left-size = 10
 ; LOCATION ;
 ;----------;
 
-bottom = false
+bottom = true
 
 ;-------;
 ; FONTS ;
@@ -59,25 +60,6 @@ padding-right = 2
 module-margin-left = 1
 module-margin-right = 2
 
-modules-left = jgmenu menu window_switch pulseaudio backlight-acpi
-modules-center = date
-modules-right = pkg keyboard memory cpu temperature battery networkmanager-dmenu
-
-tray-position = hidden
-tray-padding = 2
-;tray-transparent = true
-;tray-background = #0063ff
-
-;wm-restack = bspwm
-;wm-restack = i3
-
-;override-redirect = true
-
-;scroll-up = bspwm-desknext
-;scroll-down = bspwm-deskprev
-
-;scroll-up = i3wm-wsnext
-;scroll-down = i3wm-wsprev
-
-cursor-click = pointer
-cursor-scroll = ns-resize
+modules-left = i3
+modules-center = spotify
+modules-right = keyboard
