--- a/common/config/polybar/polybars/small-top-only.conf
+++ b/common/config/polybar/polybars/small-top-only.conf
@@ -1,4 +1,4 @@
-[bar/polybar-top-only]
+[bar/small-polybar-top-only]
 line-size = 3
 line-color = #f00
 
@@ -10,12 +10,12 @@ border-color = #00000000
 ;------------;
 
 width = 100%
-height = 35
+height = 15
 offset-y = 0
 offset-x = 0
 
-border-top-size = 10
-border-bottom-size = 5
+border-top-size = 15
+border-bottom-size = 0
 border-right-size = 10
 border-left-size = 10
 
