--- a/common/config/polybar/polybars/small-top.conf
+++ b/common/config/polybar/polybars/small-top.conf
@@ -1,4 +1,4 @@
-[bar/polybar-top-only]
+[bar/small-polybar-top]
 line-size = 3
 line-color = #f00
 
@@ -10,12 +10,12 @@ border-color = #00000000
 ;------------;
 
 width = 100%
-height = 35
+height = 15
 offset-y = 0
 offset-x = 0
 
-border-top-size = 10
-border-bottom-size = 5
+border-top-size = 15
+border-bottom-size = 0
 border-right-size = 10
 border-left-size = 10
 
@@ -61,10 +61,10 @@ module-margin-right = 2
 
 modules-left = jgmenu menu window_switch pulseaudio backlight-acpi
 modules-center = date
-modules-right = pkg keyboard memory cpu temperature battery networkmanager-dmenu
+modules-right = pkg filesystem memory cpu temperature networkmanager-dmenu
 
 tray-position = hidden
-tray-padding = 2
+tray-padding = 2 
 ;tray-transparent = true
 ;tray-background = #0063ff
 
