--- a/common/config/polybar/polybars/bottom.conf
+++ b/common/config/polybar/polybars/bottom.conf
@@ -61,5 +61,5 @@ module-margin-left = 1
 module-margin-right = 2
 
 modules-left = i3
-modules-center = spotify
+modules-center = 
 modules-right = keyboard
