--- a/common/config/polybar/polybars/small-bottom.conf
+++ b/common/config/polybar/polybars/small-bottom.conf
@@ -30,11 +30,11 @@ bottom = true
 ; FONTS ;
 ;-------;
 
-font-0 = "monospace:size=10;2"
-font-1 = "Font Awesome 5 Brands:pixelsize=10;1"
-font-2 = "MaterialIcons:size=10;2"
-font-3 = "icomoon:size=10;2"
-font-4 = "Ubuntu Mono Nerd Font:size=10:;2"
+font-0 = "monospace:size=9;2"
+font-1 = "Font Awesome 5 Brands:pixelsize=9;1"
+font-2 = "MaterialIcons:size=9;2"
+font-3 = "icomoon:size=9;2"
+font-4 = "Ubuntu Mono Nerd Font:size=9:;2"
 
 ;--------;
 ; COLORS ;
@@ -61,5 +61,5 @@ module-margin-left = 1
 module-margin-right = 2
 
 modules-left = i3
-modules-center = spotify
+modules-center = 
 modules-right = keyboard
