--- a/common/config/polybar/polybars/small-bottom.conf
+++ b/common/config/polybar/polybars/small-bottom.conf
@@ -62,4 +62,4 @@ module-margin-right = 2
 
 modules-left = i3
 modules-center = 
-modules-right = keyboard
+modules-right = keyboard filesystem memory cpu temperature
