--- a/common/config/polybar/polybars/small-top.conf
+++ b/common/config/polybar/polybars/small-top.conf
@@ -59,9 +59,9 @@ padding-right = 2
 module-margin-left = 1
 module-margin-right = 2
 
-modules-left = jgmenu menu window_switch pulseaudio backlight-acpi
+modules-left = jgmenu menu window_switch
 modules-center = date
-modules-right = pkg filesystem memory cpu temperature networkmanager-dmenu
+modules-right = pkg pulseaudio backlight-acpi networkmanager-dmenu
 
 tray-position = hidden
 tray-padding = 2 
