--- a/common/config/polybar/modules/jgmenu.conf
+++ b/common/config/polybar/modules/jgmenu.conf
@@ -5,4 +5,4 @@ label-padding = 1
 interval = 10
 exec = echo ""
 click-left = "jgmenu_run >/dev/null 2>&1 &"
-click-right = exo-open $HOME/.config/jgmenu/jgmenurc
+click-right = exo-open ~/.config/jgmenu/jgmenurc
