--- a/common/config/polybar/modules/pkg.conf
+++ b/common/config/polybar/modules/pkg.conf
@@ -1,6 +1,6 @@
 [module/pkg]
 type = custom/script
-exec = $HOME/bin/updates
+exec = ~/bin/updates
 exec-if = "ping -q -w 2 -c 1 176.34.135.167 > /dev/null"
 label = %{A1:termite --exec=sysupdate & disown:} %{A3:termite --exec=sysupdate & disown:}%output%%{A} %{A}
 tail = true
