--- a/common/config/polybar/modules.conf
+++ b/common/config/polybar/modules.conf
@@ -2,21 +2,21 @@
 ; MODULES ;
 ;---------;
 
-include-file = $HOME/.config/polybar/modules/audio.conf
-include-file = $HOME/.config/polybar/modules/datetime.conf
-include-file = $HOME/.config/polybar/modules/fs.conf
-include-file = $HOME/.config/polybar/modules/i3.conf
-include-file = $HOME/.config/polybar/modules/jgmenu.conf
-include-file = $HOME/.config/polybar/modules/keyboard.conf
-include-file = $HOME/.config/polybar/modules/light.conf
-include-file = $HOME/.config/polybar/modules/menu.conf
-include-file = $HOME/.config/polybar/modules/mpd.conf
-include-file = $HOME/.config/polybar/modules/net.conf
-include-file = $HOME/.config/polybar/modules/pkg.conf
-include-file = $HOME/.config/polybar/modules/resources.conf
-include-file = $HOME/.config/polybar/modules/spotify.conf
-include-file = $HOME/.config/polybar/modules/weather.conf
-include-file = $HOME/.config/polybar/modules/window.conf
+include-file = ~/.config/polybar/modules/audio.conf
+include-file = ~/.config/polybar/modules/datetime.conf
+include-file = ~/.config/polybar/modules/fs.conf
+include-file = ~/.config/polybar/modules/i3.conf
+include-file = ~/.config/polybar/modules/jgmenu.conf
+include-file = ~/.config/polybar/modules/keyboard.conf
+include-file = ~/.config/polybar/modules/light.conf
+include-file = ~/.config/polybar/modules/menu.conf
+include-file = ~/.config/polybar/modules/mpd.conf
+include-file = ~/.config/polybar/modules/net.conf
+include-file = ~/.config/polybar/modules/pkg.conf
+include-file = ~/.config/polybar/modules/resources.conf
+include-file = ~/.config/polybar/modules/spotify.conf
+include-file = ~/.config/polybar/modules/weather.conf
+include-file = ~/.config/polybar/modules/window.conf
 
 [settings]
 screenchange-reload = true
