--- a/common/config/i3/config
+++ b/common/config/i3/config
@@ -40,7 +40,7 @@ exec_always --no-startup-id ~/.config/polybar/launch
 exec --no-startup-id xfsettingsd
 
 # needed for super to launch rofi through ksuperkey, see ~/.xprofile
-bindsym Mod1+F1 exec --no-startup-id rofi_run -r
+bindsym Mod1+F1 exec --no-startup-id ~/bin/rofi_run -r
 
 #############         Bindings           ##################
 
@@ -50,7 +50,7 @@ bindsym Mod1+q kill
 bindsym Mod1+F4 kill
 
 # launchers
-bindsym Control+space exec --no-startup-id rofi_run -r
+bindsym Control+space exec --no-startup-id ~/bin/rofi_run -r
 
 # core
 bindsym $Mod+w          exec --no-startup-id exo-open --launch WebBrowser
@@ -59,7 +59,7 @@ bindsym $Mod+t          exec --no-startup-id exo-open --launch TerminalEmulator
 bindsym $Mod+Return     exec --no-startup-id exo-open --launch TerminalEmulator
 
 # logout script
-bindsym $Mod+x exec --no-startup-id rofi_run -l
+bindsym $Mod+x exec --no-startup-id ~/bin/rofi_run -l
 
 # Screenshot
 bindsym Print exec --no-startup-id "scrot '%S.png' -e 'mv $f $$(xdg-user-dir PICTURES)/img-%S-$wx$h.png ; feh $$(xdg-user-dir PICTURES)/img-%S-$wx$h.png'"
