--- a/common/config/xfce4/panel/whiskermenu-1.rc
+++ b/common/config/xfce4/panel/whiskermenu-1.rc
@@ -2,7 +2,7 @@ favorites=exo-terminal-emulator.desktop,exo-file-manager.desktop,exo-mail-reader
 recent=exo-web-browser.desktop,exo-mail-reader.desktop,exo-file-manager.desktop,exo-terminal-emulator.desktop
 
 button-title=
-button-icon=/usr/share/icons/ArchLabs-Dark/64x64/places/distributor-logo-archlabs.png
+button-icon=
 button-single-row=false
 show-button-title=false
 show-button-icon=true
