--- a/common/config/polybar/modules/resources.conf
+++ b/common/config/polybar/modules/resources.conf
@@ -1,7 +1,7 @@
 [module/cpu]
 type = internal/cpu
 interval = 2
-format-prefix = "  "
+format-prefix = "  "
 format-prefix-foreground = ${colors.primary}
 format-underline = 
 label = %percentage:2%%
@@ -10,7 +10,7 @@ label-foreground = ${colors.primary}
 [module/memory]
 type = internal/memory
 interval = 2
-format-prefix = "  "
+format-prefix = "  "
 format-prefix-foreground = ${colors.primary}
 format-underline = 
 label = %percentage_used%%
