--- a/common/config/polybar/modules/menu.conf
+++ b/common/config/polybar/modules/menu.conf
@@ -8,7 +8,7 @@ label-separator = " | "
 # Top level
 menu-0-0 = "  "
 menu-0-0-exec = menu-open-1
-menu-0-1 = "  "
+menu-0-1 = "  "
 menu-0-1-exec = menu-open-2
 menu-0-2 = "   |"
 menu-0-2-exec = menu-open-3
@@ -18,7 +18,7 @@ menu-1-0-exec = menu-open-0
 menu-1-0-foreground = ${colors.urgent}
 menu-1-1 = "  "
 menu-1-1-exec = exo-open --launch WebBrowser
-menu-1-2 = "  "
+menu-1-2 = "  "
 menu-1-2-exec = exo-open --launch TerminalEmulator
 menu-1-3 = "   |"
 menu-1-3-exec = exo-open --launch FileManager
@@ -26,7 +26,7 @@ menu-1-3-exec = exo-open --launch FileManager
 menu-2-0 = "  "
 menu-2-0-exec = menu-open-0
 menu-2-0-foreground = ${colors.urgent}
-menu-2-1 = "  "
+menu-2-1 = "  "
 menu-2-1-exec = ~/bin/rofi_run -p
 menu-2-2 = "   |"
 menu-2-2-exec = pavucontrol &
