Updated polybar modules

--- a/common/config/polybar/modules/net.conf
+++ b/common/config/polybar/modules/net.conf
@@ -2,7 +2,7 @@
 type = custom/script
 exec = check-network
 click-left = networkmanager_dmenu &
-click-right = networkmanager_dmenu &
+click-right = exo-open ~/.config/networkmanager-dmenu/config.ini
 label-padding = 1
 tail = true
 
@@ -12,7 +12,7 @@ format-connected = <ramp-signal>
 
 [module/wlan-description]
 type = internal/network
-interface = wlp2s0u1u2
+interface = ${env:WIFI_IFACE:}
 interval = 3.0
 
 format-connected = <ramp-signal> <label-connected>
@@ -35,7 +35,7 @@ ramp-signal-foreground = ${colors.primary}
 
 [module/eth]
 type = internal/network
-interface = enp2s0
+interface = ${env:ETH_IFACE:}
 interval = 3.0
 
 format-connected-underline = #55aa55
