--- a/common/config/polybar/polybars/small-bottom.conf
+++ b/common/config/polybar/polybars/small-bottom.conf
@@ -1,4 +1,3 @@
-
 [bar/small-polybar-bottom]
 line-size = 3
 line-color = #f00
@@ -10,15 +9,15 @@ border-color = #00000000
 ; DIMENSIONS ;
 ;------------;
 
-width = 100%
-height = 25
-offset-y = 0
-offset-x = 0
+width = ${env:POLYBAR_BOTTOM_WIDTH:100%}
+height = ${env:POLYBAR_BOTTOM_HEIGHT:25}
+offset-y = ${env:POLYBAR_BOTTOM_OFFSET_Y:0}
+offset-x = ${env:POLYBAR_BOTTOM_OFFSET_X:0}
 
-border-top-size = 0
-border-bottom-size = 10
-border-right-size = 10
-border-left-size = 10
+border-top-size = ${env:POLYBAR_BOTTOM_BORDER_TOP_SIZE:0}
+border-bottom-size = ${env:POLYBAR_BOTTOM_BORDER_BOTTOM_SIZE:10}
+border-right-size = ${env:POLYBAR_BOTTOM_BORDER_RIGHT_SIZE:10}
+border-left-size = ${env:POLYBAR_BOTTOM_BORDER_LEFT_SIZE:10}
 
 ;----------;
 ; LOCATION ;
@@ -60,6 +59,6 @@ padding-right = 2
 module-margin-left = 1
 module-margin-right = 2
 
-modules-left = i3
-modules-center = 
-modules-right = keyboard filesystem memory cpu temperature
+modules-left = ${env:POLYBAR_BOTTOM_LEFT:i3}
+modules-center = ${env:POLYBAR_BOTTOM_CENTER:}
+modules-right = ${env:POLYBAR_BOTTOM_RIGHT:keyboard filesystem memory cpu temperature}
