--- a/common/config/polybar/polybars/top.conf
+++ b/common/config/polybar/polybars/top.conf
@@ -9,15 +9,15 @@ border-color = #00000000
 ; DIMENSIONS ;
 ;------------;
 
-width = 100%
-height = 35
-offset-y = 0
-offset-x = 0
+width = ${env:POLYBAR_TOP_WIDTH:100%}
+height = ${env:POLYBAR_TOP_HEIGHT:35}
+offset-y = ${env:POLYBAR_TOP_OFFSET_Y:0}
+offset-x = ${env:POLYBAR_TOP_OFFSET_X:0}
 
-border-top-size = 10
-border-bottom-size = 5
-border-right-size = 10
-border-left-size = 10
+border-top-size = ${env:POLYBAR_TOP_BORDER_TOP_SIZE:10}
+border-bottom-size = ${env:POLYBAR_TOP_BORDER_BOTTOM_SIZE:5}
+border-right-size = ${env:POLYBAR_TOP_BORDER_RIGHT_SIZE:10}
+border-left-size = ${env:POLYBAR_TOP_BORDER_LEFT_SIZE:10}
 
 ;----------;
 ; LOCATION ;
@@ -59,9 +59,9 @@ padding-right = 2
 module-margin-left = 1
 module-margin-right = 2
 
-modules-left = jgmenu menu window_switch pulseaudio-bar backlight-acpi-bar
-modules-center = date
-modules-right = pkg filesystem memory cpu temperature networkmanager-dmenu
+modules-left = ${env:POLYBAR_TOP_LEFT:jgmenu menu window_switch pulseaudio-bar backlight-acpi-bar}
+modules-center = ${env:POLYBAR_TOP_CENTER:date}
+modules-right = ${env:POLYBAR_TOP_RIGHT:pkg filesystem memory cpu temperature networkmanager-dmenu}
 
 tray-position = hidden
 tray-padding = 2 
