--- a/common/config/polybar/modules/keyboard.conf
+++ b/common/config/polybar/modules/keyboard.conf
@@ -9,7 +9,7 @@ format-spacing = 0
 ;   %name%
 ;   %number%
 ; Default: %layout%
-label-layout   = %{A1:mintlocale & disown:} %{A3:mintlocale & disown:} %layout%%{A} %{A}
+label-layout   = %{A1:xfce4-keyboard-settings & disown:}%{A3:xfce4-keyboard-settings & disown:}  %layout%%{A} %{A}
 
 ; Available tokens:
 ;   %name%
@@ -22,7 +22,7 @@ label-indicator-background = #8139e8
 type = internal/xkeyboard
 blacklist-0 = num lock
 
-format-prefix = "  "
+format-prefix = "  "
 format-prefix-foreground = ${colors.foreground-alt}
 format-prefix-underline = ${colors.secondary}
 
