--- a/common/config/polybar/polybars/small-bottom.conf
+++ b/common/config/polybar/polybars/small-bottom.conf
@@ -29,11 +29,11 @@ bottom = true
 ; FONTS ;
 ;-------;
 
-font-0 = "monospace:size=9;2"
-font-1 = "Font Awesome 5 Brands:pixelsize=9;1"
-font-2 = "MaterialIcons:size=9;2"
-font-3 = "icomoon:size=9;2"
-font-4 = "Ubuntu Mono Nerd Font:size=9:;2"
+font-0 = "monospace:size=8;2"
+font-1 = "Font Awesome 5 Free:style=Solid:pixelsize=8;3"
+font-2 = "Font Awesome 5 Free:style=Regular:pixelsize=8;3"
+font-3 = "Font Awesome 5 Brands:pixelsize=8;3"
+font-4 = "Ubuntu Mono Nerd Font:size=8:;2"
 
 ;--------;
 ; COLORS ;
@@ -60,5 +60,5 @@ module-margin-left = 1
 module-margin-right = 2
 
 modules-left = ${env:POLYBAR_BOTTOM_LEFT:i3}
-modules-center = ${env:POLYBAR_BOTTOM_CENTER:}
+modules-center = ${env:POLYBAR_BOTTOM_CENTER:spotify}
 modules-right = ${env:POLYBAR_BOTTOM_RIGHT:keyboard filesystem memory cpu temperature}
