--- a/common/config/polybar/polybars/small-top.conf
+++ b/common/config/polybar/polybars/small-top.conf
@@ -29,11 +29,11 @@ bottom = false
 ; FONTS ;
 ;-------;
 
-font-0 = "monospace:size=9;2"
-font-1 = "Font Awesome 5 Brands:pixelsize=9;1"
-font-2 = "MaterialIcons:size=9;2"
-font-3 = "icomoon:size=9;2"
-font-4 = "Ubuntu Mono Nerd Font:size=9:;2"
+font-0 = "monospace:size=8;2"
+font-1 = "Font Awesome 5 Free:style=Solid:pixelsize=8;3"
+font-2 = "Font Awesome 5 Free:style=Regular:pixelsize=8;3"
+font-3 = "Font Awesome 5 Brands:pixelsize=8;3"
+font-4 = "Ubuntu Mono Nerd Font:size=8:;2"
 
 ;--------;
 ; COLORS ;
