--- a/common/config/polybar/modules/pkg.conf
+++ b/common/config/polybar/modules/pkg.conf
@@ -2,5 +2,5 @@
 type = custom/script
 exec = ~/bin/updates
 exec-if = "ping -q -w 2 -c 1 176.34.135.167 > /dev/null"
-label = %{A1:termite --exec=~/bin/sysupdate & disown:} %{A3:termite --exec=~/bin/sysupdate & disown:}%output%%{A} %{A}
+label = %{A1:termite --exec=sysupdate & disown:} %{A3:termite --exec=sysupdate & disown:}%output%%{A} %{A}
 tail = true
