--- a/common/config/polybar/modules/resources.conf
+++ b/common/config/polybar/modules/resources.conf
@@ -19,8 +19,8 @@ label-foreground = ${colors.primary}
 [module/battery]
 type = internal/battery
 ; Use $ ls -1 /sys/class/power_supply/
-battery = ${env:LAPTOP_BATTERY:BAT1}
-adapter = ${env:LAPTOP_ADAPTER:ACAD}
+battery = ${xrdb:polybar.modules.laptop-battery:BAT1}
+adapter = ${xrdb:polybar.modules.laptop-adapter:ACAD}
 full-at = 98
 poll-interval = 5
 time-format = %H:%M
