--- a/common/config/polybar/polybars/bottom.conf
+++ b/common/config/polybar/polybars/bottom.conf
@@ -9,15 +9,15 @@ border-color = #00000000
 ; DIMENSIONS ;
 ;------------;
 
-width = ${env:POLYBAR_BOTTOM_WIDTH:100%}
-height = ${env:POLYBAR_BOTTOM_HEIGHT:30}
-offset-y = ${env:POLYBAR_BOTTOM_OFFSET_Y:0}
-offset-x = ${env:POLYBAR_BOTTOM_OFFSET_X:0}
+width = ${xrdb:polybar.bottom.width:100%}
+height = ${xrdb:polybar.bottom.height:30}
+offset-y = ${xrdb:polybar.bottom.offset-y:0}
+offset-x = ${xrdb:polybar.bottom.offset-x:0}
 
-border-top-size = ${env:POLYBAR_BOTTOM_BORDER_TOP_SIZE:10}
-border-bottom-size = ${env:POLYBAR_BOTTOM_BORDER_BOTTOM_SIZE:10}
-border-right-size = ${env:POLYBAR_BOTTOM_BORDER_RIGHT_SIZE:10}
-border-left-size = ${env:POLYBAR_BOTTOM_BORDER_LEFT_SIZE:10}
+border-top-size = ${xrdb:polybar.bottom.border-top-size:10}
+border-bottom-size = ${xrdb:polybar.bottom.border-bottom-size:10}
+border-right-size = ${xrdb:polybar.bottom.border-right-size:10}
+border-left-size = ${xrdb:polybar.bottom.border-left-size:10}
 
 ;----------;
 ; LOCATION ;
@@ -59,6 +59,6 @@ padding-right = 2
 module-margin-left = 1
 module-margin-right = 2
 
-modules-left = ${env:POLYBAR_BOTTOM_LEFT:i3}
-modules-center = ${env:POLYBAR_BOTTOM_CENTER:spotify}
-modules-right = ${env:POLYBAR_BOTTOM_RIGHT:keyboard}
+modules-left = ${xrdb:polybar.bottom.left:i3}
+modules-center = ${xrdb:polybar.bottom.center:spotify}
+modules-right = ${xrdb:polybar.bottom.right:keyboard}
