--- a/common/config/i3/config
+++ b/common/config/i3/config
@@ -31,7 +31,7 @@ set $WS8 "8: "
 ###############     Autostart      ##################
 
 # run with reload
-exec_always --no-startup-id xrdb -load ~/.Xresources
+exec_always --no-startup-id xrdb -I$HOME -load ~/.Xresources
 exec_always --no-startup-id compton --config ~/.config/compton.conf
 exec_always --no-startup-id ~/.config/feh/.fehbg
 exec_always --no-startup-id ~/.config/polybar/launch
