--- a/common/config/polybar/modules.conf
+++ b/common/config/polybar/modules.conf
@@ -18,6 +18,11 @@ include-file = ~/.config/polybar/modules/spotify.conf
 include-file = ~/.config/polybar/modules/weather.conf
 include-file = ~/.config/polybar/modules/window.conf
 
+;---------;
+; CUSTOM  ;
+;---------;
+include-file = ~/.config/polybar/modules/custom.conf
+
 [settings]
 screenchange-reload = true
 ;compositing-background = xor
