--- a/common/config/polybar/modules/datetime.conf
+++ b/common/config/polybar/modules/datetime.conf
@@ -1,6 +1,6 @@
 [module/date]
 type = internal/date
-interval = 5
+interval = 1.0
 
 date =
 date-alt = " %Y-%m-%d"
@@ -14,3 +14,11 @@ format-underline =
 format-foreground = ${colors.primary}
 
 label = %date% %time%
+
+[module/date-popup]
+type = custom/script
+exec = $HOME/bin/popup-calendar
+interval = 5
+click-left = $HOME/bin/popup-calendar --popup
+format-foreground = ${colors.primary}
+label = %output:25%
