--- a/common/config/polybar/polybars/small-top.conf
+++ b/common/config/polybar/polybars/small-top.conf
@@ -60,7 +60,7 @@ module-margin-left = 1
 module-margin-right = 2
 
 modules-left = ${xrdb:polybar.top.left:jgmenu menu window_switch}
-modules-center = ${xrdb:polybar.top.center:date}
+modules-center = ${xrdb:polybar.top.center:date-popup}
 modules-right = ${xrdb:polybar.top.right:pkg pulseaudio backlight-acpi networkmanager-dmenu}
 
 tray-position = hidden
