--- a/common/config/polybar/modules/net.conf
+++ b/common/config/polybar/modules/net.conf
@@ -12,7 +12,7 @@ format-connected = <ramp-signal>
 
 [module/wlan-description]
 type = internal/network
-interface = ${xrdb:polybar.modules.wifi-iface:}
+interface = ${xrdb:polybar.modules.wifi.iface:}
 interval = 3.0
 
 format-connected = <ramp-signal> <label-connected>
@@ -35,7 +35,7 @@ ramp-signal-foreground = ${colors.primary}
 
 [module/eth]
 type = internal/network
-interface = ${xrdb:polybar.modules.eth-iface:}
+interface = ${xrdb:polybar.modules.eth.iface:}
 interval = 3.0
 
 format-connected-underline = #55aa55
