--- a/common/config/polybar/polybars/small-bottom.conf
+++ b/common/config/polybar/polybars/small-bottom.conf
@@ -11,13 +11,13 @@ border-color = #00000000
 
 width = ${xrdb:polybar.bottom.width:100%}
 height = ${xrdb:polybar.bottom.height:25}
-offset-y = ${xrdb:polybar.bottom.offset-y:0}
-offset-x = ${xrdb:polybar.bottom.offset-x:0}
+offset-y = ${xrdb:polybar.bottom.offset.y:0}
+offset-x = ${xrdb:polybar.bottom.offset.x:0}
 
-border-top-size = ${xrdb:polybar.bottom.border-top-size:0}
-border-bottom-size = ${xrdb:polybar.bottom.border-bottom-size:10}
-border-right-size = ${xrdb:polybar.bottom.border-right-size:10}
-border-left-size = ${xrdb:polybar.bottom.border-left-size:10}
+border-top-size = ${xrdb:polybar.bottom.border.top.size:0}
+border-bottom-size = ${xrdb:polybar.bottom.border.bottom.size:10}
+border-right-size = ${xrdb:polybar.bottom.border.right.size:10}
+border-left-size = ${xrdb:polybar.bottom.border.left.size:10}
 
 ;----------;
 ; LOCATION ;
