--- a/common/config/polybar/polybars/small-top.conf
+++ b/common/config/polybar/polybars/small-top.conf
@@ -11,13 +11,13 @@ border-color = #00000000
 
 width = ${xrdb:polybar.top.width:100%}
 height = ${xrdb:polybar.top.height:15}
-offset-y = ${xrdb:polybar.top.offset-y:0}
-offset-x = ${xrdb:polybar.top.offset-x:0}
+offset-y = ${xrdb:polybar.top.offset.y:0}
+offset-x = ${xrdb:polybar.top.offset.x:0}
 
-border-top-size = ${xrdb:polybar.top.border-top-size:15}
-border-bottom-size = ${xrdb:polybar.top.border-bottom-size:0}
-border-right-size = ${xrdb:polybar.top.border-right-size:10}
-border-left-size = ${xrdb:polybar.top.border-left-size:10}
+border-top-size = ${xrdb:polybar.top.border.top.size:15}
+border-bottom-size = ${xrdb:polybar.top.border.bottom.size:0}
+border-right-size = ${xrdb:polybar.top.border.right.size:10}
+border-left-size = ${xrdb:polybar.top.border.left.size:10}
 
 ;----------;
 ; LOCATION ;
