--- a/common/config/polybar/config
+++ b/common/config/polybar/config
@@ -9,3 +9,8 @@ include-file = ~/.config/polybar/polybars/bottom.conf
 include-file = ~/.config/polybar/polybars/small-top.conf
 include-file = ~/.config/polybar/polybars/small-top-only.conf
 include-file = ~/.config/polybar/polybars/small-bottom.conf
+
+;---------;
+; CUSTOM  ;
+;---------;
+include-file = ~/.config/polybar/polybars/custom.conf
