--- a/common/config/fontconfig/fonts.conf
+++ b/common/config/fontconfig/fonts.conf
@@ -43,13 +43,13 @@
   <alias>
     <family>monospace</family>
     <prefer>
-      <family>Ubuntu Mono</family>
+      <family>UbuntuMono</family>
     </prefer>
   </alias>
   <alias>
     <family>mono</family>
     <prefer>
-      <family>Ubuntu Mono</family>
+      <family>UbuntuMono</family>
     </prefer>
   </alias>
 
