--- a/common/config/polybar/modules/audio.conf
+++ b/common/config/polybar/modules/audio.conf
@@ -1,3 +1,9 @@
+[module/pulseaudio-microphone]
+type = custom/script
+exec = ~/bin/microphone
+tail = true
+click-left = ~/bin/microphone --toggle &
+
 [module/pulseaudio-bar]
 inherit = module/pulseaudio
 format-volume =   <label-volume> <bar-volume>
