--- a/common/config/polybar/modules/light.conf
+++ b/common/config/polybar/modules/light.conf
@@ -16,6 +16,8 @@ bar-empty = ─
 bar-empty-font = 4
 bar-empty-foreground = ${colors.foreground-alt}
 
+enable-scroll = true
+
 [module/backlight-acpi-bar]
 inherit = module/xbacklight
 type = internal/backlight
